tests/invalid/07_invalid_number.js
// 错误: 非法的数字格式
let bad1 = 123abc
let bad2 = 0x
